--- a/RedBiteDemo/Base.lproj/Main.storyboard
+++ b/RedBiteDemo/Base.lproj/Main.storyboard
@@ -1,24 +1,100 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PWC-bd-eZZ">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Contribuitors-->
+        <scene sceneID="dvz-Lb-k7c">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController storyboardIdentifier="LandingVC" id="8nm-wo-bZh" customClass="LandingVC" customModule="RedBiteDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="PGF-jf-Yws">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ContribuitorInfoCellID" rowHeight="73" id="owH-Lg-1HQ" customClass="ContribuitorInfoCell" customModule="RedBiteDemo" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="73"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="owH-Lg-1HQ" id="RoZ-hY-nsv">
+                                    <rect key="frame" x="0.0" y="0.0" width="341" height="72.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nhK-L5-eGI">
+                                            <rect key="frame" x="15" y="11" width="50" height="50"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="50" id="GkY-Nl-TvK"/>
+                                                <constraint firstAttribute="width" constant="50" id="YLN-EP-m9b"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="55e-8Q-jew">
+                                            <rect key="frame" x="73" y="11" width="218" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="02j-Pl-ymq"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GAy-zt-B9l">
+                                            <rect key="frame" x="73" y="40" width="218" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="BtN-fb-JFR"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="55e-8Q-jew" secondAttribute="trailing" constant="50" id="10L-tV-Dpn"/>
+                                        <constraint firstItem="nhK-L5-eGI" firstAttribute="top" secondItem="RoZ-hY-nsv" secondAttribute="top" constant="11" id="4ei-yq-C3M"/>
+                                        <constraint firstItem="55e-8Q-jew" firstAttribute="top" secondItem="RoZ-hY-nsv" secondAttribute="top" constant="11" id="6fs-HD-uII"/>
+                                        <constraint firstItem="GAy-zt-B9l" firstAttribute="leading" secondItem="nhK-L5-eGI" secondAttribute="trailing" constant="8" id="EJe-sR-dh8"/>
+                                        <constraint firstItem="55e-8Q-jew" firstAttribute="leading" secondItem="nhK-L5-eGI" secondAttribute="trailing" constant="8" id="SN9-ta-hqK"/>
+                                        <constraint firstAttribute="trailing" secondItem="GAy-zt-B9l" secondAttribute="trailing" constant="50" id="ZOR-Gq-N95"/>
+                                        <constraint firstItem="GAy-zt-B9l" firstAttribute="top" secondItem="55e-8Q-jew" secondAttribute="bottom" constant="8" id="eUe-jp-bpH"/>
+                                        <constraint firstItem="nhK-L5-eGI" firstAttribute="leading" secondItem="RoZ-hY-nsv" secondAttribute="leading" constant="15" id="nIE-0C-ZoN"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="imgvContribuitor" destination="nhK-L5-eGI" id="tvM-ml-s7x"/>
+                                    <outlet property="lblContributorsCount" destination="GAy-zt-B9l" id="RWr-N2-mFJ"/>
+                                    <outlet property="lblName" destination="55e-8Q-jew" id="uNi-ag-W5b"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="8nm-wo-bZh" id="D6z-fu-rDZ"/>
+                            <outlet property="delegate" destination="8nm-wo-bZh" id="WX6-Cq-rUU"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Contribuitors" id="Opt-BN-BhD"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ez3-0u-J3D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="509.60000000000002" y="89.505247376311857"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="5yL-o7-5vR">
+            <objects>
+                <navigationController id="PWC-bd-eZZ" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="TAr-Pw-aJe">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="8nm-wo-bZh" kind="relationship" relationship="rootViewController" id="Zc3-tc-Ffo"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="heo-83-tDz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-441" y="90"/>
         </scene>
     </scenes>
 </document>
