--- a/RedBiteDemo/Base.lproj/Main.storyboard
+++ b/RedBiteDemo/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -79,6 +80,33 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ez3-0u-J3D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="509.60000000000002" y="89.505247376311857"/>
+        </scene>
+        <!--Contribuitor InfoVC-->
+        <scene sceneID="VRH-iY-9xa">
+            <objects>
+                <viewController storyboardIdentifier="ContribuitorInfoVC" id="j2h-W3-2ag" customClass="ContribuitorInfoVC" customModule="RedBiteDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="iN1-a9-8pn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="q8v-fN-H2w">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="q8v-fN-H2w" firstAttribute="top" secondItem="Axb-7z-ZV3" secondAttribute="top" id="8Uu-4S-wnD"/>
+                            <constraint firstItem="q8v-fN-H2w" firstAttribute="leading" secondItem="Axb-7z-ZV3" secondAttribute="leading" id="OYA-im-X7y"/>
+                            <constraint firstItem="q8v-fN-H2w" firstAttribute="trailing" secondItem="Axb-7z-ZV3" secondAttribute="trailing" id="Qr6-yB-6gX"/>
+                            <constraint firstItem="q8v-fN-H2w" firstAttribute="bottom" secondItem="Axb-7z-ZV3" secondAttribute="bottom" id="bL5-ic-ONM"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Axb-7z-ZV3"/>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eWE-K1-m6v" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1373.5999999999999" y="89.505247376311857"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="5yL-o7-5vR">
